Fix line breaks on front page big link.

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
@@ -191,11 +191,11 @@
                 font-size: 16px;
             }
             @media @big-mobile {
-                font-size: 28px;
+                font-size: 22px;
             }
         }
 
-        padding: 5% 2% 2% 6%;
+        padding: 8px 2% 2% 6%;
         @media @big-mobile {
             padding: 8% 12% 2% 15%;
         }
