--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/typography.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/typography.less
@@ -150,3 +150,7 @@ pre {
     }
 }
 
+.own-line {
+    display: block;
+
+}
